IU_Network_NSG.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
      "AppName" : {
		"type" : "string",
		"minLength": 0,
		"maxLength": 255,
		"defaultValue" : "default",
        "metadata": {
          "description": "Name for the instance of this application topology"
      }
    }  
  },
  "variables": {
  },
  "resources": [
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "IUVPC",
      "location": "[resourceGroup().location]",
      "tags": { 
         "Name": "[concat('IU-', parameters('AppName'))]"
      },
      "dependsOn": [
		    "Microsoft.Network/networkSecurityGroups/IUSecurityGroupBackEnd",
		    "Microsoft.Network/networkSecurityGroups/IUSecurityGroupFrontEnd",
		    "Microsoft.Network/networkSecurityGroups/IUSecurityGroupBastion"
	    ], 
      "properties": {
        "addressSpace": {
          "addressPrefixes": [ "10.0.0.0/16" ]
        },
        "subnets": [
          {
            "name": "BackEnd",
            "tags": { 
               "Name": "[concat('IU-', parameters('AppName'),'-BackEnd')]"
            },
            "properties": {
              "addressPrefix": "10.0.0.0/25",
              "networkSecurityGroup": {
				        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'IUSecurityGroupBackEnd')]"
			          }
            }
          },
          {
            "name": "FrontEnd",
            "tags": { 
               "Name": "[concat('IU-', parameters('AppName'),'-FrontEnd')]"
            },
            "properties": {
              "addressPrefix": "10.0.0.128/25",
              "networkSecurityGroup": {
				        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'IUSecurityGroupFrontEnd')]"
			        }
            }
          },
          {
            "name": "Bastion",
            "tags": { 
               "Name": "[concat('IU-', parameters('AppName'),'-Bastion')]"
            },
            "properties": {
              "addressPrefix": "10.0.1.0/29",
              "networkSecurityGroup": {
				      "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'IUSecurityGroupBastion')]"
			        }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "IUBastionElasticIP",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4,
        "dnsSettings": {
          "domainNameLabel": "iubastionelasticip"
        }
      }
    },
    {
	    "apiVersion": "2015-06-15",
	    "type": "Microsoft.Network/networkSecurityGroups",
	    "name": "IUSecurityGroupFrontEnd",
	    "location": "[resourceGroup().location]",
        "tags": { 
           "Name": "[concat('IU-', parameters('AppName'),'-FrontEnd')]"
        },
	    "properties": {
		"securityRules": [
		    {
			"name": "ssh",
			"properties": {
			    "description": "Allow SSH from Bastion",
			    "protocol": "Tcp",
			    "sourcePortRange": "*",
			    "destinationPortRange": "22",
			    "sourceAddressPrefix": "10.0.1.0/29",
			    "destinationAddressPrefix": "*",
			    "access": "Allow",
			    "priority": 100,
			    "direction": "Inbound"
			}
		    },
		    {
			"name": "web_rule",
			"properties": {
			    "description": "Allow Website",
			    "protocol": "Tcp",
			    "sourcePortRange": "80",
			    "destinationPortRange": "80",
			    "sourceAddressPrefix": "Internet",
			    "destinationAddressPrefix": "*",
			    "access": "Allow",
			    "priority": 200,
			    "direction": "Inbound"
			}
		    },
		    {
			"name": "database",
			"properties": {
			    "description": "database traffic",
			    "protocol": "Tcp",
			    "sourcePortRange": "27017",
			    "destinationPortRange": "27017",
			    "sourceAddressPrefix": "10.0.0.0/25",
			    "destinationAddressPrefix": "*",
			    "access": "Allow",
			    "priority": 1000,
			    "direction": "Inbound"
			}
		  }
		]
	  }
	},
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "IUSecurityGroupBackEnd",
      "location": "[resourceGroup().location]",
      "tags": { 
        "Name": "[concat('IU-', parameters('AppName'),'-BackEnd')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "Web1",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "80",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "10.0.0.128/25",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Web2",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "81",
              "destinationPortRange": "81",
              "sourceAddressPrefix": "10.0.0.128/25",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "database",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "27017",
              "destinationPortRange": "27017",
              "sourceAddressPrefix": "10.0.0.128/25",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound"
            }
          },
          {
            "name": "ssh",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "10.0.1.0/29",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 400,
              "direction": "Inbound"
            }
          },
          {
            "name": "update_daemon",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "8000",
              "destinationPortRange": "8000",
              "sourceAddressPrefix": "10.0.1.0/29",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 500,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "IUSecurityGroupBastion",
      "location": "[resourceGroup().location]",
      "tags": { 
        "Name": "[concat('IU-', parameters('AppName'),'-Bastion')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "update_daemon",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "8000",
              "destinationPortRange": "8000",
              "sourceAddressPrefix": "10.0.0.0/25",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 500,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ]
 }
